--- a/starship/starship.nuspec
+++ b/starship/starship.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>starship</id>
     <title>Starship</title>
-    <version>0.41.3</version>
+    <version>0.49.0</version>
     <authors>Starship Contributors</authors>
     <owners>saanuregh</owners>
     <summary>The cross-shell prompt for astronauts</summary>
@@ -19,6 +19,9 @@
     <copyright>© 2019 Starship Contributors</copyright>
     <licenseUrl>https://github.com/starship/starship/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <dependencies>
+    	<dependency id="vcredist140" version="14.23.27820" />
+	</dependencies>
     <releaseNotes>
     </releaseNotes>
   </metadata>
